<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_list"
        android:title="@string/action_add_list"
        app:showAsAction="never"/>

    <item android:id="@+id/action_load_backup"
        android:title="@string/action_load_backup"
        app:showAsAction="never" />

    <item android:id="@+id/action_save_backup"
        android:title="@string/action_save_backup"
        app:showAsAction="never" />

    <item android:id="@+id/action_import"
        android:title="@string/action_import_textfile"
        app:showAsAction="never" />

    <item android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>