<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.github.tduva.fredlist.gui.sub.EditEntryActivity">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/entry_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/entry_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/entry_name"
            android:hint="@string/hint_notes"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/entry_category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/entry_notes"
            android:layout_marginTop="8dp"
            android:text="@string/label_category" />

        <Spinner
            android:id="@+id/entry_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/entry_category_label"
            android:textSize="16sp" />

        <TextView android:id="@+id/entry_lists_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_lists"
            android:layout_below="@id/entry_category" />

        <TextView
            android:id="@+id/entry_lists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/entry_lists_label"
            android:onClick="onEditLists"
            android:text="Example List"
            android:textAppearance="@style/Widget.AppCompat.EditText"
            android:textSize="16sp"
            android:layout_margin="20px" />
    </RelativeLayout>
</ScrollView>
